Fix bg and z-index

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -44,14 +44,9 @@
 		@apply opacity-80;
 	}
 	.hero {
-		background-color: #c56d92;
-		background-image: linear-gradient(
-			168deg,
-			#c56d92 0%,
-			#851440 36%,
-			#851440 66%,
-			#c56d92 100%
-		);
+		background: #ee9ca7;
+		background: -webkit-linear-gradient(to right, #ffdde1, #ee9ca7);
+		background: linear-gradient(to right, #ffdde1, #ee9ca7);
 	}
 	.nav-icon {
 		@apply text-[25px]  cursor-pointer relative transition-transform duration-300 ease-in-out border-none bg-transparent hover:scale-110;
